# StreamingVision

./: .gitignore  BAYESOPT.md  README.md  build_notebook.py  genmatter_rt.py  genmatter_viz.py  render_demo.py  requirements.txt  streaming_demo.ipynb  streaming_demo_executed.ipynb  streaming_dino.py  streaming_eval.py
genmatterpp/: .gitignore  LICENSE  README.md  VENDORED.md  __init__.py  config.py  pyproject.toml  run_experiments.py
genmatterpp/configs/: custom_bayesopt.yaml  custom_default.yaml
genmatterpp/genmatter/: bootstrap_stats.py  core_types.py  dataloader.py  datatypes.py  evaluation.py  inference.py  instance_seg_metrics.py  model_3d.py  trace_wrappers.py  utils.py
genmatterpp/postprocessing/: postprocess_davis.py
genmatterpp/preprocessing/: __init__.py
genmatterpp/scripts/: davis_preprocess.py  davis_tapvid_fetch.py  diagnose_jax_recompile.py  download_tapvid_davis.py  download_tapvid_davis.sh  download_url_list.py  monitor_bayesopt_trials.sh  orchestrate_bayesopt.py  run_bayesopt_background.sh  run_custom_bayesopt.py  run_davis_experiments_sequential.sh  run_pseudo_gt_background.sh  start_bayesopt_detached.sh  sweep_sigma_f_outliers.py  tapvid_davis_urls.txt  verify_jax_jit_reuse.py
genmatterpp/tests/: conftest.py  test_bayesopt_ax_smoke.py  test_bayesopt_lcb.py  test_bayesopt_objective.py  test_bayesopt_search_space.py  test_bayesopt_trial_store.py  test_cli.py  test_config_schema.py  test_dino.py  test_frames.py  test_gpu.py  test_instance_seg_metrics.py  test_jax_recompile_diagnostics.py  test_outlier_stats.py  test_paths.py  test_preprocess.py  test_pseudo_gt_build_mock.py  test_pseudo_gt_colors.py  test_pseudo_gt_correspondence.py  test_pseudo_gt_hybrid.py  test_pseudo_gt_sam2_video.py  test_sam_frame0.py  test_track.py  test_tracking_dino.py  test_tracking_jit_reuse.py  test_vda_helpers.py  test_viz.py  test_viz_colors.py  (+2 more)
(+99 files in other folders)
