[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "genmatter"
version = "0.1.0"
description = "Probabilistic 3D particle tracking for motion segmentation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "timm==1.0.19",
    "jax[cuda12]==0.5.3",
    "genjax==0.10.3",
    "tensorflow-probability==0.23.0",
    "numpy==1.26.4",
    "scipy==1.16.2",
    "scikit-learn==1.6.1",
    "scikit-image==0.25.2",
    "opencv-python==4.11.0.86",
    "Pillow==11.3.0",
    "matplotlib==3.10.6",
    "imageio[ffmpeg]==2.37.0",
    "tqdm==4.67.1",
    "rich==13.9.4",
    "pyyaml>=6.0",
    "ultralytics>=8.4.26",
    "einops>=0.4.1",
    "easydict",
    "av>=16.0.1",
    "xformers==0.0.29.post3",
    "setuptools>=69",
    "rerun-sdk==0.23.1",
]

[project.scripts]
genmatter = "genmatter.custom.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
bayesopt = [
    "ax-platform>=0.4.0",
    "botorch>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
# Third-party deprecations (matplotlib/pyparsing, triton via PyTorch) — not GenMatter code.
filterwarnings = [
    "ignore::DeprecationWarning:matplotlib",
    "ignore::DeprecationWarning:pyparsing",
    "ignore::DeprecationWarning:triton",
]

[tool.hatch.build.targets.wheel]
packages = ["genmatter"]

[tool.uv]
find-links = ["https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
